day40-enterprise-capstone/modules/networking/main.tf
resource "aws_vpc" "this" {

  cidr_block = "10.0.0.0/16"

  enable_dns_hostnames = true

  enable_dns_support = true

  tags = merge(
    var.common_tags,
    {
      Name = "enterprise-vpc"
    }
  )
}

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.this.id

  tags = merge(
    var.common_tags,
    {
      Name = "enterprise-igw"
    }
  )
}

resource "aws_subnet" "public_a" {

  vpc_id = aws_vpc.this.id

  cidr_block = "10.0.1.0/24"

  availability_zone = "ap-south-1a"

  map_public_ip_on_launch = true

  tags = merge(
    var.common_tags,
    {
      Name = "public-subnet-a"
    }
  )
}

resource "aws_subnet" "public_b" {

  vpc_id = aws_vpc.this.id

  cidr_block = "10.0.2.0/24"

  availability_zone = "ap-south-1b"

  map_public_ip_on_launch = true

  tags = merge(
    var.common_tags,
    {
      Name = "public-subnet-b"
    }
  )
}

resource "aws_subnet" "private_a" {

  vpc_id = aws_vpc.this.id

  cidr_block = "10.0.11.0/24"

  availability_zone = "ap-south-1a"

  tags = merge(
    var.common_tags,
    {
      Name = "private-subnet-a"
    }
  )
}

resource "aws_subnet" "private_b" {

  vpc_id = aws_vpc.this.id

  cidr_block = "10.0.12.0/24"

  availability_zone = "ap-south-1b"

  tags = merge(
    var.common_tags,
    {
      Name = "private-subnet-b"
    }
  )
}

resource "aws_eip" "nat" {

  domain = "vpc"

  tags = merge(
    var.common_tags,
    {
      Name = "nat-eip"
    }
  )
}

resource "aws_nat_gateway" "nat" {

  allocation_id = aws_eip.nat.id

  subnet_id = aws_subnet.public_a.id

  depends_on = [
    aws_internet_gateway.igw
  ]

  tags = merge(
    var.common_tags,
    {
      Name = "enterprise-nat"
    }
  )
}

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.this.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id
  }

  tags = merge(
    var.common_tags,
    {
      Name = "public-rt"
    }
  )
}

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.this.id

  route {

    cidr_block = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = merge(
    var.common_tags,
    {
      Name = "private-rt"
    }
  )
}

resource "aws_route_table_association" "public_a" {

  subnet_id = aws_subnet.public_a.id

  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_b" {

  subnet_id = aws_subnet.public_b.id

  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_a" {

  subnet_id = aws_subnet.private_a.id

  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_b" {

  subnet_id = aws_subnet.private_b.id

  route_table_id = aws_route_table.private.id
}
